lab2/Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error SEMI
    9       | error ExtDecList SEMI
   10       | error SEMI

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmList RC
   30       | LC error RC

   31 StmList: Stmt StmList
   32        | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | LP error RP
   66    | ID LP error RP
   67    | Exp LB error RB

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 10 22 25 30 42 65 66 67
TYPE (258) 13
ID (259) 17 19 20 23 24 25 58 59 61 62 66
INT (260) 21 63
FLOAT (261) 64
LC (262) 15 29 30
RC (263) 15 29 30
IF (264) 36 37
WHILE (265) 38
STRUCT (266) 15 16
RETURN (267) 35
SEMI (268) 4 5 7 8 9 10 33 35 41 42
COMMA (269) 12 26 44 68
LOWER_THAN_ELSE (270)
ELSE (271) 37
ASSIGNOP (272) 46 47
OR (273) 49
AND (274) 48
RELOP (275) 50
PLUS (276) 51
MINUS (277) 52 56
STAR (278) 53
DIV (279) 54
NOT (280) 57
LP (281) 23 24 25 36 37 38 55 58 59 65 66
RP (282) 23 24 25 36 37 38 55 58 59 65 66
LB (283) 21 22 60 67
RB (284) 21 22 60 67
DOT (285) 61


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7 8 9 10, 右： 2
ExtDecList (35)
    左： 11 12, 右： 4 9 12
Specifier (36)
    左： 13 14, 右： 4 5 6 7 8 28 41
StructSpecifier (37)
    左： 15 16, 右： 14
OptTag (38)
    左： 17 18, 右： 15
Tag (39)
    左： 19, 右： 16
VarDec (40)
    左： 20 21 22, 右： 11 12 21 22 28 45 46
FunDec (41)
    左： 23 24 25, 右： 6 7
VarList (42)
    左： 26 27, 右： 23 26
ParamDec (43)
    左： 28, 右： 26 27
CompSt (44)
    左： 29 30, 右： 6 34
StmList (45)
    左： 31 32, 右： 29 31
Stmt (46)
    左： 33 34 35 36 37 38, 右： 31 36 37 38
DefList (47)
    左： 39 40, 右： 15 29 39
Def (48)
    左： 41 42, 右： 39
DecList (49)
    左： 43 44, 右： 41 44
Dec (50)
    左： 45 46, 右： 43 44
Exp (51)
    左： 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67, 右： 33 35 36 37 38 46 47 48 49 50 51 52 53 54 55 56 57
    60 61 67 68 69
Args (52)
    左： 68 69, 右： 58 68


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    9 ExtDef: error . ExtDecList SEMI
   10       | error . SEMI

    ID    shift, and go to state 9
    SEMI  shift, and go to state 10

    ExtDecList  转到状态 11
    VarDec      转到状态 12


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag

    ID  shift, and go to state 13

    $default  reduce using rule 18 (OptTag)

    OptTag  转到状态 14
    Tag     转到状态 15


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 17
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 18
    ID     shift, and go to state 19
    SEMI   shift, and go to state 20

    ExtDecList  转到状态 21
    VarDec      转到状态 12
    FunDec      转到状态 22


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 10

   10 ExtDef: error SEMI .

    $default  reduce using rule 10 (ExtDef)


State 11

    9 ExtDef: error ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 12

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 11 (ExtDecList)


State 13

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 14

   15 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 26


State 15

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 16

    0 $accept: Program $end .

    $default  接受


State 17

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 18

    8 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 27


State 19

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP error RP

    LP  shift, and go to state 28

    $default  reduce using rule 20 (VarDec)


State 20

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 21

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 29


State 22

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    LC    shift, and go to state 30
    SEMI  shift, and go to state 31

    CompSt  转到状态 32


State 23

    9 ExtDef: error ExtDecList SEMI .

    $default  reduce using rule 9 (ExtDef)


State 24

   12 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 9

    ExtDecList  转到状态 33
    VarDec      转到状态 12


State 25

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 34
    INT    shift, and go to state 35


State 26

   15 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 40 (DefList)

    Specifier        转到状态 37
    StructSpecifier  转到状态 8
    DefList          转到状态 38
    Def              转到状态 39


State 27

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 28

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . error RP

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 41

    Specifier        转到状态 42
    StructSpecifier  转到状态 8
    VarList          转到状态 43
    ParamDec         转到状态 44


State 29

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 30

   29 CompSt: LC . DefList StmList RC
   30       | LC . error RC

    error   shift, and go to state 45
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    ID      reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)

    Specifier        转到状态 37
    StructSpecifier  转到状态 8
    DefList          转到状态 46
    Def              转到状态 39


State 31

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 32

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 33

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 34

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 47


State 35

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 48


State 36

   42 Def: error . SEMI

    SEMI  shift, and go to state 49


State 37

   41 Def: Specifier . DecList SEMI

    ID  shift, and go to state 9

    VarDec   转到状态 50
    DecList  转到状态 51
    Dec      转到状态 52


State 38

   15 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 53


State 39

   39 DefList: Def . DefList

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    ID      reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)

    Specifier        转到状态 37
    StructSpecifier  转到状态 8
    DefList          转到状态 54
    Def              转到状态 39


State 40

   25 FunDec: ID LP error . RP

    RP  shift, and go to state 55


State 41

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 42

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 9

    VarDec  转到状态 56


State 43

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 57


State 44

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 58

    $default  reduce using rule 27 (VarList)


State 45

   30 CompSt: LC error . RC
   42 Def: error . SEMI

    RC    shift, and go to state 59
    SEMI  shift, and go to state 49


State 46

   29 CompSt: LC DefList . StmList RC

    ID      shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    LC      shift, and go to state 30
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    RETURN  shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68

    $default  reduce using rule 32 (StmList)

    CompSt   转到状态 69
    StmList  转到状态 70
    Stmt     转到状态 71
    Exp      转到状态 72


State 47

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 48

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 49

   42 Def: error SEMI .

    $default  reduce using rule 42 (Def)


State 50

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 73
    LB        shift, and go to state 25

    $default  reduce using rule 45 (Dec)


State 51

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 74


State 52

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 75

    $default  reduce using rule 43 (DecList)


State 53

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 54

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 55

   25 FunDec: ID LP error RP .

    $default  reduce using rule 25 (FunDec)


State 56

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 28 (ParamDec)


State 57

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 58

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 42
    StructSpecifier  转到状态 8
    VarList          转到状态 76
    ParamDec         转到状态 44


State 59

   30 CompSt: LC error RC .

    $default  reduce using rule 30 (CompSt)


State 60

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .
   66    | ID . LP error RP

    LP  shift, and go to state 77

    $default  reduce using rule 62 (Exp)


State 61

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 62

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 63

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 64

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 65

   35 Stmt: RETURN . Exp SEMI

    ID     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  转到状态 80


State 66

   56 Exp: MINUS . Exp

    ID     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  转到状态 81


State 67

   57 Exp: NOT . Exp

    ID     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  转到状态 82


State 68

   55 Exp: LP . Exp RP
   65    | LP . error RP

    error  shift, and go to state 83
    ID     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  转到状态 84


State 69

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 70

   29 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 85


State 71

   31 StmList: Stmt . StmList

    ID      shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    LC      shift, and go to state 30
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    RETURN  shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68

    $default  reduce using rule 32 (StmList)

    CompSt   转到状态 69
    StmList  转到状态 86
    Stmt     转到状态 71
    Exp      转到状态 72


State 72

   33 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   67    | Exp . LB error RB

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    OR        shift, and go to state 89
    AND       shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    LB        shift, and go to state 96
    DOT       shift, and go to state 97


State 73

   46 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  转到状态 98


State 74

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 75

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 9

    VarDec   转到状态 50
    DecList  转到状态 99
    Dec      转到状态 52


State 76

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 77

   58 Exp: ID LP . Args RP
   59    | ID LP . RP
   66    | ID LP . error RP

    error  shift, and go to state 100
    ID     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68
    RP     shift, and go to state 101

    Exp   转到状态 102
    Args  转到状态 103


State 78

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  转到状态 104


State 79

   38 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  转到状态 105


State 80

   35 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   67    | Exp . LB error RB

    SEMI      shift, and go to state 106
    ASSIGNOP  shift, and go to state 88
    OR        shift, and go to state 89
    AND       shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    LB        shift, and go to state 96
    DOT       shift, and go to state 97


State 81

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   67    | Exp . LB error RB

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    LB    shift, and go to state 96
    DOT   shift, and go to state 97

    $default  reduce using rule 56 (Exp)


State 82

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   67    | Exp . LB error RB

    LB   shift, and go to state 96
    DOT  shift, and go to state 97

    $default  reduce using rule 57 (Exp)


State 83

   65 Exp: LP error . RP

    RP  shift, and go to state 107


State 84

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   67    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    OR        shift, and go to state 89
    AND       shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    RP        shift, and go to state 108
    LB        shift, and go to state 96
    DOT       shift, and go to state 97


State 85

   29 CompSt: LC DefList StmList RC .

    $default  reduce using rule 29 (CompSt)


State 86

   31 StmList: Stmt StmList .

    $default  reduce using rule 31 (StmList)


State 87

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 88

   47 Exp: Exp ASSIGNOP . Exp
